# ocaml-onnx

./: .gitignore  README.md  dune-project  onnx.opam
.github/workflows/: workflow.yml
src/config/: discover.ml
src/image/: dune  image.ml  image.mli
src/stubs/: bindings.ml  gen.ml
src/wrapper/: dune  element_type.ml  element_type.mli  env.ml  env.mli  import.ml  input_output_info.mli  metadata.ml  metadata.mli  onnx_stubs.c  onnx_stubs.h  session.ml  session.mli  session_options.ml  session_options.mli  session_with_args.ml  session_with_args.mli  tensor_type_and_shape.ml  tensor_type_and_shape.mli  value.ml  value.mli  wrappers.ml  wrappers.mli
tests/: add_one.onnx  dune  test_basic.ml
