opam-version: "2.0"
name:         "onnx"
bug-reports:  "https://github.com/LaurentMazare/ocaml-onnx/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-onnx"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-onnx.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] { os-distribution != "alpine" }
]

depends: [
  "base" {>= "v0.13.0" & < "v0.15"}
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "dune" {>= "2.0.0" build}
  "dune-configurator"
  "ocaml" {>= "4.10"}
  "ppx_expect" {>= "v0.13.0" & < "v0.15" with-test}
  "ppx_sexp_conv" {>= "v0.13.0" & < "v0.15"}
  "ppx_sexp_message" {>= "v0.13.0" & < "v0.15"}
  "sexplib" {>= "v0.13.0" & < "v0.15"}
  "stdio"
]

available: arch = "x86_64" & (os = "linux" | os = "macos")

synopsis: "ONNX bindings for OCaml"
description: """
Bindings for ONNX, the open standard for machine learning interoperability.
"""
